Changed Action to Intent - Implemented in-UI searching

--- a/src/sme-main-connector.html
+++ b/src/sme-main-connector.html
@@ -59,6 +59,8 @@
 <script type="text/html" data-template-name="sme-main-connector">
     <div style="max-width:500px;">Communication with semilimes server is by messages. <code>connector</code> node is user connection to semilimes server. One <code>connector</code> global instance should be sharely used for flows. But you can create instances for different users.</div>
     <br />
+    <div style="max-width:500px;">Get your API Key by accessing the <a href="https://my.semilimes.net/login" target="_blank"><span style="color:blue">semilimes Services</span></a></div>
+    <br />
 
     <div class="form-row">
         <label for="node-config-input-name"><i class="fa fa-tag"></i> Name</label>
@@ -86,7 +88,7 @@
     <div style="font-size: smaller;max-width:500px;">Use an X-Account (development mode only)</div>
     <br />
 
-    <!--<button id="connectButton" type="button" class="red-ui-button" onclick="connectToSemilimes()">Verify Connection</button>-->
+    <div style="font-size: small"
 
 </script>
 
