--- a/src/sme-main-sshTunnel.html
+++ b/src/sme-main-sshTunnel.html
@@ -24,7 +24,7 @@
             return 'SSH Tunnel';
         },
         labelStyle: function () {
-            return this.credentials.host ? "node_label_italic" : "";
+            return this.connector ? "node_label_italic" : "";
         }
     });
 
