--- a/src/sme-main-connector.html
+++ b/src/sme-main-connector.html
@@ -57,7 +57,8 @@
 </script>
 
 <script type="text/html" data-template-name="sme-main-connector">
-    <div style="max-width:500px;">Communication with semilimes server is by messages. <code>connector</code> node is user connection to semilimes server. One <code>connector</code> global instance should be sharely used for flows. But you can create instances for different users.</div>
+    <div style="max-width:500px;">Communication with semilimes server requires a <code>connector</code> node. This node is a global instance that operates the connection using the identity specified by the provided Api key.
+        For a correct behaviour it is advised to use only one <code>connector</code> instance per api key provided.</div>
     <br />
     <div style="max-width:500px;">Get your API Key by accessing the <a href="https://my.semilimes.net/login" target="_blank"><span style="color:blue">semilimes Services</span></a></div>
     <br />
@@ -69,7 +70,7 @@
 
     <div class="form-row">
         <label for="node-config-input-server"><i class="fa fa-tag"></i> Server</label>
-        <input type="text" id="node-config-input-server" placeholder="Please blank to connect default server.">
+        <input type="text" id="node-config-input-server" placeholder="Leave blank to connect to the default server.">
     </div>
     <div style="font-size: smaller;max-width:500px;">You can specify development server to check your flow then switch back to the default production server.</div>
     <br />
@@ -88,26 +89,22 @@
     <div style="font-size: smaller;max-width:500px;">Use an X-Account (development mode only)</div>
     <br />
 
-    <div style="font-size: small"
-
 </script>
 
 <script type="text/html" data-help-name="sme-main-connector">
-    <p>Setup connection to semilimes.</p>
-    <h3>Inputs</h3>
+    <p>Setup connection to semilimes. Each connector will instantiate an HTTP client and a WebSocket connection authorized by the specified API key.</p>
+    <h3>Properties</h3>
     <dl class="message-properties">
-        <dt class="optional">Server <span class="property-type">sme-server</span></dt>
-        <dd>Target additional semilimes server for development.</dd>
+        <dt class="optional">Server <span class="property-type">string</span></dt>
+        <dd>Target additional semilimes server for development. Leave blank to use the official semilimes environment.</dd>
     </dl>
-    <h3>Outputs</h3>
     <dl class="message-properties">
-        <dt>payload <span class="property-type">sme-message</span></dt>
+        <dt>Api Key <span class="property-type">string</span></dt>
+        <dd>The authorization key that identifies your operating subAccount in semilimes. Get one <a href="https://my.semilimes.net/login" target="_blank">here</a>.</dd>
     </dl>
-    <h3>Details</h3>
-    <p><code>msg.payload</code> is used to store received message from semilimes. It is a <code>sme-message</code>, a JSON-parsed object.</p>
     <h3>References</h3>
     <ul>
-        <li><a href="https://github.com/semimob/node-red-connector/blob/main/docs/MessageFormat.md">Message Formats</a> - full description of <code>sme-message</code>(s) and their properties.</li>
-        <li><a href="https://github.com/semimob/node-red-connector.git">GitHub</a> - the nodes github repository</li>
+        <li><a href="https://www.semilimes.com/developers/#api-documentation">API docs</a>: the semilimes API official documentation</li>
+        <li><a href="https://github.com/semilimes/nodered-publicapi-connector">GitHub project</a>: the source code of this connector</li>
     </ul>
 </script>
